fix heading overflowing on mobile devices

--- a/web/app/src/style/home.css
+++ b/web/app/src/style/home.css
@@ -26,3 +26,9 @@
         background-color: #4b4b4b;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .homeh1 {
+        font-size: 72px !important;
+    }
+}
